--- a/demo/demo-global.html
+++ b/demo/demo-global.html
@@ -8,7 +8,8 @@
     <script src="../node_modules/es5-shim/es5-shim.js"></script>
     <script src="../node_modules/es5-shim/es5-sham.js"></script>
 
-    <script src="../dist/index.aio.js"></script>
+    <!-- <script src="../dist/index.aio.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/lazyload-all@0.1.0/dist/index.aio.js"></script> -->
     <script>
       console.log(window['LazyLoadAll']);
       const lazyLoadeAllInstance = window.LazyLoadAll.initLazyloadAll({
